--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <h1>Title</h1>
-    <h2>Subtitle</h2>
+    <h1>{{ title }}</h1>
+    <h2>{{ subtitle }}</h2>
   </div>
 </header>
