Slides 38-41 - Add post1 attribute to AlbumComponent, display title and description

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -6,8 +6,8 @@
         <article class="card">
           <img src="https://via.placeholder.com/480x320?text=image" alt="Alt text" />
           <div class="card-body">
-            <h3>Title</h3>
-            <p>This is a description.</p>
+            <h3>{{ post1.title }}</h3>
+            <p>{{ post1.description }}</p>
             <p class="likes">0 <i class="far fa-heart"></i></p>
           </div>
         </article>
