Slides 44-46 - Use attribute binding syntax

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -4,7 +4,7 @@
 
       <div class="column-3">
         <article class="card">
-          <img src="{{ post1.picture }}" alt="Alt text" />
+          <img [src]="post1.picture" alt="Alt text" />
           <div class="card-body">
             <h3>{{ post1.title }}</h3>
             <p>{{ post1.description }}</p>
