--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
-<app-header [title]="'Angular Album'"></app-header>
+<app-header
+  [title]="'Angular Album'"
+  [subtitle]="'Apprendre les bases'"
+></app-header>
 <app-album></app-album>
 <app-footer></app-footer>
