--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -3,25 +3,11 @@
     <div class="grid">
 
       <div class="column-3">
-        <article class="card">
-          <img [src]="post1.picture" alt="Alt text" />
-          <div class="card-body">
-            <h3>{{ post1.title }}</h3>
-            <p>{{ post1.description }}</p>
-            <p class="likes">0 <i class="far fa-heart"></i></p>
-          </div>
-        </article>
+        <app-card [post]="post1"></app-card>
       </div>
 
       <div class="column-3">
-        <article class="card">
-          <img [src]="post2.picture" alt="Alt text" />
-          <div class="card-body">
-            <h3>{{ post2.title }}</h3>
-            <p>{{ post2.description }}</p>
-            <p class="likes">0 <i class="far fa-heart"></i></p>
-          </div>
-        </article>
+        <app-card [post]="post2"></app-card>
       </div>
 
       <div class="column-3">
