Slides 67-69 - replace post1 with posts array

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -3,7 +3,7 @@
     <div class="grid">
 
       <div class="column-3">
-        <app-card [post]="post1"></app-card>
+        <app-card [post]="posts[0]"></app-card>
       </div>
 
       <div class="column-3">
