Slides 70-72 - move post2's data to posts array

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -7,7 +7,7 @@
       </div>
 
       <div class="column-3">
-        <app-card [post]="post2"></app-card>
+        <app-card [post]="posts[1]"></app-card>
       </div>
 
       <div class="column-3">
