--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container grid">
     <div class="column-2">
-      {{ copyright }}
+      {{ label }}
     </div>
     <div class="column-2 social-icons">
       <a href="https://facebook.com/">
