--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -1,26 +1,9 @@
 <main>
   <div class="container">
     <div class="grid">
-
-      <div class="column-3">
-        <app-card [post]="posts[0]"></app-card>
+      <div *ngFor="let post of posts" class="column-3">
+        <app-card [post]="post"></app-card>
       </div>
-
-      <div class="column-3">
-        <app-card [post]="posts[1]"></app-card>
-      </div>
-
-      <div class="column-3">
-        <article class="card">
-          <img src="https://via.placeholder.com/480x320?text=image" alt="Alt text" />
-          <div class="card-body">
-            <h3>Title</h3>
-            <p>This is a description.</p>
-            <p class="likes">0 <i class="far fa-heart"></i></p>
-          </div>
-        </article>
-      </div>
-
     </div>
   </div>
 </main>
