--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -3,6 +3,6 @@
   <div class="card-body">
     <h3>{{ post.title }}</h3>
     <p>{{ post.description }}</p>
-    <p class="likes">{{ likes }} <i class="far fa-heart"></i></p>
+    <p class="likes">{{ likes }} <i class="far fa-heart" (click)="like()"></i></p>
   </div>
 </article>
