Slides 95-96 - Replace hardcoded app-album with router-outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   [title]="'Angular Album'"
   [subtitle]="'Apprendre les bases'"
 ></app-header>
-<app-album></app-album>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
