--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -8,7 +8,7 @@
   width: 100%;
   border-top-left-radius: .25em;
   border-top-right-radius: .25em;
-  max-height: 240px;
+  max-height: 280px;
   object-fit: cover;
 }
 .card-body {
@@ -17,8 +17,9 @@
 .card-body h3 {
   margin: 0 0 .5em 0;
 }
-.card-body .likes {
-  text-align: right;
+.card-body .icons {
+  display: flex;
+  justify-content: space-between;
 }
 .card-body .likes .fa-heart {
   color: #c34;
