--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -1,5 +1,13 @@
 <main>
   <div class="container">
+    <div>
+      <label for="sort-by">Sort by</label>
+      <select id="sort-by" [(ngModel)]="sortBy">
+        <option value="date">Date (most recent)</option>
+        <option value="likes">Popularity (most liked)</option>
+        <option value="title">Title (A-Z)</option>
+      </select>
+    </div>
     <div class="grid">
       <div *ngFor="let post of posts" class="column-3">
         <app-card [post]="post"></app-card>
