--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,9 @@
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/contact">Contact</a></li>
       <li><a routerLink="/add-post">Add Post</a></li>
-      <li><a routerLink="/login">Login</a></li>
-      <li><a routerLink="/register">Register</a></li>
+      <li *ngIf="!currentUser"><a routerLink="/login">Login</a></li>
+      <li *ngIf="!currentUser"><a routerLink="/register">Register</a></li>
+      <li *ngIf="currentUser">{{ currentUser.login }}</li>
     </ul>
   </div>
 </nav>
