--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,17 @@
 <nav>
-  <div class="container">
+  <div class="container nav-wrapper">
     <ul>
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/contact">Contact</a></li>
       <li><a routerLink="/add-post">Add Post</a></li>
+    </ul>
+    <ul>
       <li *ngIf="!currentUser"><a routerLink="/login">Login</a></li>
       <li *ngIf="!currentUser"><a routerLink="/register">Register</a></li>
-      <li *ngIf="currentUser">{{ currentUser.login }}</li>
+      <li *ngIf="currentUser">
+        <button type="button" (click)="logout()">{{ currentUser.login }}(logout)</button>
+      </li>
     </ul>
   </div>
 </nav>
