--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,6 +4,7 @@
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/contact">Contact</a></li>
+      <li><a routerLink="/add-post">Add post</a></li>
     </ul>
   </div>
 </nav>
