--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,7 @@
       <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/contact">Contact</a></li>
       <li><a routerLink="/add-post">Add post</a></li>
+      <li><a routerLink="/register">Register</a></li>
     </ul>
   </div>
 </nav>
