--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,10 +1,8 @@
 <div class="col-md-6 offset-md-3 mt-5">
   <div class="alert alert-info">
-      Username: test<br />
-      Password: test
   </div>
   <div class="card">
-      <h4 class="card-header">Angular 8 JWT Login Example</h4>
+      <h4 class="card-header">Register</h4>
       <div class="card-body">
           <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
@@ -19,7 +17,7 @@
               </div>
               <button [disabled]="loading" class="btn btn-primary">
                   <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                  Login
+                  Register
               </button>
               <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
           </form>
