--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
       <li><a routerLink="/contact">Contact</a></li>
       <li><a routerLink="/add-post">Add post</a></li>
       <li><a routerLink="/register">Register</a></li>
+      <li><a routerLink="/login">Login</a></li>
     </ul>
   </div>
 </nav>
