--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,11 @@
       -->
       <li><a routerLink="/register" *ngIf="!currentUser">Register</a></li>
       <li><a routerLink="/login" *ngIf="!currentUser">Login</a></li>
-      <li><button type="button" *ngIf="currentUser">{{ currentUser.login }} (Logout)</button></li>
+      <li>
+        <button type="button" *ngIf="currentUser" (click)="logout()">
+          {{ currentUser.login }} (Logout)
+        </button>
+      </li>
     </ul>
   </div>
 </nav>
