Handle deletePost errors (Unauthorized, Forbidden, Not Found), show generic message for unhandled code

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -8,5 +8,6 @@
       <i class="fa fa-trash" (click)="delete()"></i>
       <span class="likes">{{ likes }} <i class="far fa-heart" (click)="like()"></i></span>
     </p>
+    <div *ngIf="error">{{ error }}</div>
   </div>
 </article>
