--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -20,3 +20,12 @@ nav ul li a {
 nav ul li a:hover {
   text-decoration: underline;
 }
+#notifications {
+  display: none;
+}
+ul.notifications {
+  display: none;
+}
+input#notifications:is(:checked) + ul.notifications {
+  display: block;
+}
