Use Output to update post in posts array

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -3,7 +3,7 @@
     <div class="grid">
 
       <div class="column-3" *ngFor="let post of posts">
-        <app-card [post]="post"></app-card>
+        <app-card [post]="post" (postUpdatedEvent)="updatePost($event)"></app-card>
       </div>
 
     </div>
